Added removing computers from view.

--- a/src/main/resources/templates/computers.html
+++ b/src/main/resources/templates/computers.html
@@ -28,7 +28,7 @@
                 <td><a
                         th:href="@{/test/edit/{id}(id=${computer.id})}">Edit</a></td>
                 <td><a
-                        th:href="@{/computer/mvc/delete/{id}(id=${computer.id})}">Delete</a></td>
+                        th:href="@{/test/remove/{id}(id=${computer.id})}">Remove</a></td>
             </tr>
             </tbody>
         </table>
