Working adding computer.

--- a/src/main/resources/templates/computers.html
+++ b/src/main/resources/templates/computers.html
@@ -33,7 +33,7 @@
             </tbody>
         </table>
     </div>
-    <p><a href="/computers/add">Add a new computer</a></p>
+    <p><a href="/test/add">Add a new computer</a></p>
 </div>
 </body>
 </html>
